--- a/html code/index.html
+++ b/html code/index.html
@@ -12,6 +12,7 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error, modi?</p>
     </section>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi nemo reiciendis necessitatibus facere dolores, autem ipsam natus alias beatae nulla?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, doloribus.</p>
 
 </body>
 </html>
